# wasm-practise

./: README.md
dynamic-dependency-resolution-example/: Cargo.toml
dynamic-dependency-resolution-example/src/: main.rs
first-glitch-art/: Cargo.toml
first-glitch-art/src/: bindings.rs  lib.rs
glitch-art-api/: Cargo.toml
glitch-art-api/src/: bindings.rs  lib.rs
greet/: Cargo.toml
greet-user/: Cargo.toml
greet-user/src/: main.rs
greet/src/: bindings.rs  lib.rs
greet/wit/: hello-world.wit  world.wit
hello-wasi-cli/: Cargo.toml
hello-wasi-cli/src/: main.rs
hello-wasi-http/: Cargo.toml
hello-wasi-http/src/: bindings.rs  lib.rs
hello-world-impl/: Cargo.toml
hello-world-impl/src/: bindings.rs  lib.rs
hello-world-with-spin/: spin.toml
hello-world-with-spin/echo/: Cargo.toml
hello-world-with-spin/echo/src/: lib.rs
my-grep/src/: main.rs
png-glitch-cli/: .gitignore  Cargo.toml
png-glitch-cli/src/: main.rs
png-glitch-cli/wit/: world.wit
