[package]
name = "first-glitch-art"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "reo0306:first-glitch-art"
target = "reo0306:glitch-art/png-glitcher@0.1.0"

[package.metadata.component.dependencies]
