[package]
name = "glitch-art-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
png-glitch = "0.5.0"
spin-sdk = "3.1.0"
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "reo0306:glitch-art-api"
target = "reo0306:glitch-art/png-glitch-cli@0.1.0"

[package.metadata.component.dependencies]
